Minor CSS fixed on mobile layout

--- a/features/project-details/components/ProjectDescription.module.scss
+++ b/features/project-details/components/ProjectDescription.module.scss
@@ -16,6 +16,8 @@
   }
   .technologies {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
     color: #811ae5;
     font-weight: 600;
@@ -31,6 +33,9 @@
     }
     h3 {
       margin: 1rem 0;
+    }
+    ul {
+      list-style: none;
     }
   }
   .buttons {
@@ -57,5 +62,11 @@
     .details {
       text-align: center;
     }
+  }
+}
+
+@media (max-width: 420px) {
+  .projectDescription button {
+    padding: 0.5rem 1rem;
   }
 }
